--- a/web/app/mix-manifest.json
+++ b/web/app/mix-manifest.json
@@ -1,78 +1,78 @@
 {
-    "/plugins/blocks/dist/scripts/banner/block.js": "/plugins/blocks/dist/scripts/banner/block.js?id=1517e6d1777e981ee4d9",
-    "/plugins/blocks/dist/scripts/container/block.js": "/plugins/blocks/dist/scripts/container/block.js?id=3a94168dc378726db468",
-    "/plugins/blocks/dist/scripts/extensions/hide-title-block.js": "/plugins/blocks/dist/scripts/extensions/hide-title-block.js?id=d4d311ce4e4a1f47d084",
-    "/plugins/blocks/dist/scripts/freedom-paper/block.js": "/plugins/blocks/dist/scripts/freedom-paper/block.js?id=ad16b2683257cef152a4",
-    "/plugins/blocks/dist/scripts/horizontal-card/block.js": "/plugins/blocks/dist/scripts/horizontal-card/block.js?id=311cbd36d69d7cc76eda",
-    "/plugins/blocks/dist/scripts/post-container/block.js": "/plugins/blocks/dist/scripts/post-container/block.js?id=d2d39400d73510f2e328",
-    "/plugins/blocks/dist/scripts/project-container/block.js": "/plugins/blocks/dist/scripts/project-container/block.js?id=b6cef607d4fa20312e35",
-    "/plugins/blocks/dist/scripts/squadd/block.js": "/plugins/blocks/dist/scripts/squadd/block.js?id=cec6290c857805508bd9",
-    "/plugins/blocks/dist/scripts/two-column/block.js": "/plugins/blocks/dist/scripts/two-column/block.js?id=6464c1306aa16ef9e725",
-    "/themes/sage/dist/scripts/app.js": "/themes/sage/dist/scripts/app.js?id=37b8432d3b3af656d1d8",
-    "/themes/sage/dist/styles/app.css": "/themes/sage/dist/styles/app.css?id=4b1d9cca2c9548971641",
-    "/themes/sage/dist/styles/editor.css": "/themes/sage/dist/styles/editor.css?id=789389567876bbfafdff",
-    "/plugins/blocks/dist/styles/public.css": "/plugins/blocks/dist/styles/public.css?id=cf9a02c17c43daa481d1",
-    "/plugins/blocks/dist/styles/editor.css": "/plugins/blocks/dist/styles/editor.css?id=cf9a02c17c43daa481d1",
-    "/themes/sage/dist/styles/gutenberg.css": "/themes/sage/dist/styles/gutenberg.css?id=8ecd4658bf7cbfb666d4",
-    "/themes/sage/dist/scripts/customizer.js": "/themes/sage/dist/scripts/customizer.js?id=3b4fb39cb0602c0bb927",
-    "/themes/sage/dist/scripts/editor.js": "/themes/sage/dist/scripts/editor.js?id=643b63839fcfa8c1f2b2",
-    "/themes/sage/dist/styles/compiled.css": "/themes/sage/dist/styles/compiled.css?id=f064d0810962dadd9916",
-    "/themes/sage/dist/images/305-miami.png": "/themes/sage/dist/images/305-miami.png?id=98e448dad37d735cf90c",
-    "/themes/sage/dist/images/background-dark-noisey.png": "/themes/sage/dist/images/background-dark-noisey.png?id=38eae8d8d5ad488a3f1b",
-    "/themes/sage/dist/images/background-flowing.jpg": "/themes/sage/dist/images/background-flowing.jpg?id=7c03bf2d2e513b89633c",
-    "/themes/sage/dist/images/banner-background.png": "/themes/sage/dist/images/banner-background.png?id=7c16439755a471671c16",
-    "/themes/sage/dist/images/banner-messaging-medium.png": "/themes/sage/dist/images/banner-messaging-medium.png?id=a74fd2c460628f626227",
-    "/themes/sage/dist/images/banner-messaging-small.png": "/themes/sage/dist/images/banner-messaging-small.png?id=a631b1f543acdff33083",
-    "/themes/sage/dist/images/banner-messaging.png": "/themes/sage/dist/images/banner-messaging.png?id=5d6964460b223566d48f",
-    "/themes/sage/dist/images/duct-tape.png": "/themes/sage/dist/images/duct-tape.png?id=d4e789a7e61931e6f365",
-    "/themes/sage/dist/images/freedom-papers-art.png": "/themes/sage/dist/images/freedom-papers-art.png?id=3d187063aeeaea75d8e3",
-    "/themes/sage/dist/images/freedom-papers.jpg": "/themes/sage/dist/images/freedom-papers.jpg?id=91e5712ee9e238a55a54",
-    "/themes/sage/dist/images/select-a-volume.jpg": "/themes/sage/dist/images/select-a-volume.jpg?id=99bb24bf935297242db9",
-    "/themes/sage/dist/images/squadd-image-1.jpg": "/themes/sage/dist/images/squadd-image-1.jpg?id=7f685df49f8a330372ef",
-    "/themes/sage/dist/images/squadd-image-2.jpg": "/themes/sage/dist/images/squadd-image-2.jpg?id=62d63f3109cf248570fc",
-    "/themes/sage/dist/images/squadd-image-3.jpg": "/themes/sage/dist/images/squadd-image-3.jpg?id=f7315cc439572a25abb9",
-    "/themes/sage/dist/images/squadd-image-4.jpg": "/themes/sage/dist/images/squadd-image-4.jpg?id=504a4c8d5d7d9cf898ee",
-    "/themes/sage/dist/images/squadd-image-5.jpg": "/themes/sage/dist/images/squadd-image-5.jpg?id=700dec242eeb1864ac9e",
-    "/themes/sage/dist/images/we-rise-bg.jpg": "/themes/sage/dist/images/we-rise-bg.jpg?id=d5d435facd1da0e0b79c",
-    "/themes/sage/dist/images/world-we-are-fighting-for.png": "/themes/sage/dist/images/world-we-are-fighting-for.png?id=32da392635c3c9c447ef",
-    "/themes/sage/dist/svg/Path 1995.svg": "/themes/sage/dist/svg/Path 1995.svg?id=4ca5a0dc23c2648cc195",
-    "/themes/sage/dist/svg/arrow-left.svg": "/themes/sage/dist/svg/arrow-left.svg?id=b701e66a4714806a66ac",
-    "/themes/sage/dist/svg/arrow-right.svg": "/themes/sage/dist/svg/arrow-right.svg?id=487c46655ea91c50b2a3",
-    "/themes/sage/dist/svg/banner-messaging.svg": "/themes/sage/dist/svg/banner-messaging.svg?id=9683fd5e966ce196c2b5",
-    "/themes/sage/dist/svg/download-this-volume.svg": "/themes/sage/dist/svg/download-this-volume.svg?id=cb44a179912da5953569",
-    "/themes/sage/dist/svg/download-volume.svg": "/themes/sage/dist/svg/download-volume.svg?id=9493d1efbeb65b834646",
-    "/themes/sage/dist/svg/facebook-square.svg": "/themes/sage/dist/svg/facebook-square.svg?id=cfdb2f96834f2a934201",
-    "/themes/sage/dist/svg/facebook.svg": "/themes/sage/dist/svg/facebook.svg?id=5df289e09c0f6bafdaed",
-    "/themes/sage/dist/svg/instagram.svg": "/themes/sage/dist/svg/instagram.svg?id=a1644b4073eddce0351c",
-    "/themes/sage/dist/svg/twitter-square.svg": "/themes/sage/dist/svg/twitter-square.svg?id=99937442f7c5b44d7fc8",
-    "/themes/sage/dist/svg/twitter.svg": "/themes/sage/dist/svg/twitter.svg?id=0729c42ac6c88ea12311",
-    "/themes/sage/dist/svg/arrow-alt-circle-down.svg": "/themes/sage/dist/svg/arrow-alt-circle-down.svg?id=670e216628688a6388a6",
-    "/themes/sage/dist/svg/arrow-alt-circle-left.svg": "/themes/sage/dist/svg/arrow-alt-circle-left.svg?id=dcb28c09aa47893cb0b0",
-    "/themes/sage/dist/svg/arrow-alt-circle-right.svg": "/themes/sage/dist/svg/arrow-alt-circle-right.svg?id=f0708eec6eea3ad893af",
-    "/themes/sage/dist/svg/arrow-alt-circle-up.svg": "/themes/sage/dist/svg/arrow-alt-circle-up.svg?id=93bedc5240a980dd1e8e",
-    "/themes/sage/dist/svg/arrow-circle-down.svg": "/themes/sage/dist/svg/arrow-circle-down.svg?id=80972e666eec74cc068b",
-    "/themes/sage/dist/svg/arrow-circle-left.svg": "/themes/sage/dist/svg/arrow-circle-left.svg?id=db56b7e5f5e2e6f2aa33",
-    "/themes/sage/dist/svg/arrow-circle-right.svg": "/themes/sage/dist/svg/arrow-circle-right.svg?id=5f4fb1f0b459b79249a5",
-    "/themes/sage/dist/svg/arrow-circle-up.svg": "/themes/sage/dist/svg/arrow-circle-up.svg?id=0521496a8ecd64022508",
-    "/themes/sage/dist/svg/arrow-down.svg": "/themes/sage/dist/svg/arrow-down.svg?id=6198c1b04731cc538f2c",
-    "/themes/sage/dist/svg/arrow-up.svg": "/themes/sage/dist/svg/arrow-up.svg?id=8160737008f7cd69fd0c",
-    "/themes/sage/dist/svg/arrows-alt-h.svg": "/themes/sage/dist/svg/arrows-alt-h.svg?id=0011749bef4a4bb97a24",
-    "/themes/sage/dist/svg/arrows-alt-v.svg": "/themes/sage/dist/svg/arrows-alt-v.svg?id=e9bda4f7ca7567ed4847",
-    "/themes/sage/dist/svg/arrows-alt.svg": "/themes/sage/dist/svg/arrows-alt.svg?id=30a185d4506a8ca28c9c",
-    "/themes/sage/dist/svg/bars-solid.svg": "/themes/sage/dist/svg/bars-solid.svg?id=b3f49afdaa769bc2cb26",
-    "/themes/sage/dist/svg/cross.svg": "/themes/sage/dist/svg/cross.svg?id=faf0f3938101ad98d64d",
-    "/themes/sage/dist/svg/ellipsis-h.svg": "/themes/sage/dist/svg/ellipsis-h.svg?id=30fc3bdc738120178ef2",
-    "/themes/sage/dist/svg/ellipsis-v.svg": "/themes/sage/dist/svg/ellipsis-v.svg?id=bf55a529737494c73af1",
-    "/themes/sage/dist/svg/envelope-open-text.svg": "/themes/sage/dist/svg/envelope-open-text.svg?id=997b1656034860db7690",
-    "/themes/sage/dist/svg/envelope-open.svg": "/themes/sage/dist/svg/envelope-open.svg?id=0dd9a658eebf55a2bf22",
-    "/themes/sage/dist/svg/envelope-square.svg": "/themes/sage/dist/svg/envelope-square.svg?id=5a6ce3361478e21cbbee",
-    "/themes/sage/dist/svg/envelope.svg": "/themes/sage/dist/svg/envelope.svg?id=39c094f9f51fb898078a",
-    "/themes/sage/dist/svg/times.svg": "/themes/sage/dist/svg/times.svg?id=2c5552a10c3ab0a115c9",
-    "/themes/sage/dist/svg/logo-black.svg": "/themes/sage/dist/svg/logo-black.svg?id=a55085746f7aaab2b905",
-    "/themes/sage/dist/svg/logo-solid.svg": "/themes/sage/dist/svg/logo-solid.svg?id=55e6d1dc7a6f720938b9",
-    "/themes/sage/dist/svg/logo.svg": "/themes/sage/dist/svg/logo.svg?id=7ae420b40cb4de3feb3c",
-    "/themes/sage/dist/svg/menu.svg": "/themes/sage/dist/svg/menu.svg?id=d2646a5378680f4ec769",
-    "/themes/sage/dist/svg/organize.svg": "/themes/sage/dist/svg/organize.svg?id=cc2a95524ec4db8bb5b9",
-    "/themes/sage/dist/svg/waves-triple.svg": "/themes/sage/dist/svg/waves-triple.svg?id=52663d659c3d7e679f47",
-    "/themes/sage/dist/svg/yellowed-paper.svg": "/themes/sage/dist/svg/yellowed-paper.svg?id=f81614cbd1ee351e63de"
+    "/plugins/blocks/dist/scripts/banner/block.js": "/plugins/blocks/dist/scripts/banner/block.js",
+    "/plugins/blocks/dist/scripts/container/block.js": "/plugins/blocks/dist/scripts/container/block.js",
+    "/plugins/blocks/dist/scripts/extensions/hide-title-block.js": "/plugins/blocks/dist/scripts/extensions/hide-title-block.js",
+    "/plugins/blocks/dist/scripts/freedom-paper/block.js": "/plugins/blocks/dist/scripts/freedom-paper/block.js",
+    "/plugins/blocks/dist/scripts/horizontal-card/block.js": "/plugins/blocks/dist/scripts/horizontal-card/block.js",
+    "/plugins/blocks/dist/scripts/post-container/block.js": "/plugins/blocks/dist/scripts/post-container/block.js",
+    "/plugins/blocks/dist/scripts/project-container/block.js": "/plugins/blocks/dist/scripts/project-container/block.js",
+    "/plugins/blocks/dist/scripts/squadd/block.js": "/plugins/blocks/dist/scripts/squadd/block.js",
+    "/plugins/blocks/dist/scripts/two-column/block.js": "/plugins/blocks/dist/scripts/two-column/block.js",
+    "/themes/sage/dist/scripts/app.js": "/themes/sage/dist/scripts/app.js",
+    "/themes/sage/dist/styles/app.css": "/themes/sage/dist/styles/app.css",
+    "/themes/sage/dist/styles/editor.css": "/themes/sage/dist/styles/editor.css",
+    "/plugins/blocks/dist/styles/public.css": "/plugins/blocks/dist/styles/public.css",
+    "/plugins/blocks/dist/styles/editor.css": "/plugins/blocks/dist/styles/editor.css",
+    "/themes/sage/dist/styles/gutenberg.css": "/themes/sage/dist/styles/gutenberg.css",
+    "/themes/sage/dist/scripts/customizer.js": "/themes/sage/dist/scripts/customizer.js",
+    "/themes/sage/dist/scripts/editor.js": "/themes/sage/dist/scripts/editor.js",
+    "/themes/sage/dist/styles/compiled.css": "/themes/sage/dist/styles/compiled.css",
+    "/themes/sage/dist/images/305-miami.png": "/themes/sage/dist/images/305-miami.png",
+    "/themes/sage/dist/images/background-dark-noisey.png": "/themes/sage/dist/images/background-dark-noisey.png",
+    "/themes/sage/dist/images/background-flowing.jpg": "/themes/sage/dist/images/background-flowing.jpg",
+    "/themes/sage/dist/images/banner-background.png": "/themes/sage/dist/images/banner-background.png",
+    "/themes/sage/dist/images/banner-messaging-medium.png": "/themes/sage/dist/images/banner-messaging-medium.png",
+    "/themes/sage/dist/images/banner-messaging-small.png": "/themes/sage/dist/images/banner-messaging-small.png",
+    "/themes/sage/dist/images/banner-messaging.png": "/themes/sage/dist/images/banner-messaging.png",
+    "/themes/sage/dist/images/duct-tape.png": "/themes/sage/dist/images/duct-tape.png",
+    "/themes/sage/dist/images/freedom-papers-art.png": "/themes/sage/dist/images/freedom-papers-art.png",
+    "/themes/sage/dist/images/freedom-papers.jpg": "/themes/sage/dist/images/freedom-papers.jpg",
+    "/themes/sage/dist/images/select-a-volume.jpg": "/themes/sage/dist/images/select-a-volume.jpg",
+    "/themes/sage/dist/images/squadd-image-1.jpg": "/themes/sage/dist/images/squadd-image-1.jpg",
+    "/themes/sage/dist/images/squadd-image-2.jpg": "/themes/sage/dist/images/squadd-image-2.jpg",
+    "/themes/sage/dist/images/squadd-image-3.jpg": "/themes/sage/dist/images/squadd-image-3.jpg",
+    "/themes/sage/dist/images/squadd-image-4.jpg": "/themes/sage/dist/images/squadd-image-4.jpg",
+    "/themes/sage/dist/images/squadd-image-5.jpg": "/themes/sage/dist/images/squadd-image-5.jpg",
+    "/themes/sage/dist/images/we-rise-bg.jpg": "/themes/sage/dist/images/we-rise-bg.jpg",
+    "/themes/sage/dist/images/world-we-are-fighting-for.png": "/themes/sage/dist/images/world-we-are-fighting-for.png",
+    "/themes/sage/dist/svg/Path 1995.svg": "/themes/sage/dist/svg/Path 1995.svg",
+    "/themes/sage/dist/svg/arrow-left.svg": "/themes/sage/dist/svg/arrow-left.svg",
+    "/themes/sage/dist/svg/arrow-right.svg": "/themes/sage/dist/svg/arrow-right.svg",
+    "/themes/sage/dist/svg/banner-messaging.svg": "/themes/sage/dist/svg/banner-messaging.svg",
+    "/themes/sage/dist/svg/download-this-volume.svg": "/themes/sage/dist/svg/download-this-volume.svg",
+    "/themes/sage/dist/svg/download-volume.svg": "/themes/sage/dist/svg/download-volume.svg",
+    "/themes/sage/dist/svg/facebook-square.svg": "/themes/sage/dist/svg/facebook-square.svg",
+    "/themes/sage/dist/svg/facebook.svg": "/themes/sage/dist/svg/facebook.svg",
+    "/themes/sage/dist/svg/instagram.svg": "/themes/sage/dist/svg/instagram.svg",
+    "/themes/sage/dist/svg/twitter-square.svg": "/themes/sage/dist/svg/twitter-square.svg",
+    "/themes/sage/dist/svg/twitter.svg": "/themes/sage/dist/svg/twitter.svg",
+    "/themes/sage/dist/svg/arrow-alt-circle-down.svg": "/themes/sage/dist/svg/arrow-alt-circle-down.svg",
+    "/themes/sage/dist/svg/arrow-alt-circle-left.svg": "/themes/sage/dist/svg/arrow-alt-circle-left.svg",
+    "/themes/sage/dist/svg/arrow-alt-circle-right.svg": "/themes/sage/dist/svg/arrow-alt-circle-right.svg",
+    "/themes/sage/dist/svg/arrow-alt-circle-up.svg": "/themes/sage/dist/svg/arrow-alt-circle-up.svg",
+    "/themes/sage/dist/svg/arrow-circle-down.svg": "/themes/sage/dist/svg/arrow-circle-down.svg",
+    "/themes/sage/dist/svg/arrow-circle-left.svg": "/themes/sage/dist/svg/arrow-circle-left.svg",
+    "/themes/sage/dist/svg/arrow-circle-right.svg": "/themes/sage/dist/svg/arrow-circle-right.svg",
+    "/themes/sage/dist/svg/arrow-circle-up.svg": "/themes/sage/dist/svg/arrow-circle-up.svg",
+    "/themes/sage/dist/svg/arrow-down.svg": "/themes/sage/dist/svg/arrow-down.svg",
+    "/themes/sage/dist/svg/arrow-up.svg": "/themes/sage/dist/svg/arrow-up.svg",
+    "/themes/sage/dist/svg/arrows-alt-h.svg": "/themes/sage/dist/svg/arrows-alt-h.svg",
+    "/themes/sage/dist/svg/arrows-alt-v.svg": "/themes/sage/dist/svg/arrows-alt-v.svg",
+    "/themes/sage/dist/svg/arrows-alt.svg": "/themes/sage/dist/svg/arrows-alt.svg",
+    "/themes/sage/dist/svg/bars.svg": "/themes/sage/dist/svg/bars.svg",
+    "/themes/sage/dist/svg/cross.svg": "/themes/sage/dist/svg/cross.svg",
+    "/themes/sage/dist/svg/ellipsis-h.svg": "/themes/sage/dist/svg/ellipsis-h.svg",
+    "/themes/sage/dist/svg/ellipsis-v.svg": "/themes/sage/dist/svg/ellipsis-v.svg",
+    "/themes/sage/dist/svg/envelope-open-text.svg": "/themes/sage/dist/svg/envelope-open-text.svg",
+    "/themes/sage/dist/svg/envelope-open.svg": "/themes/sage/dist/svg/envelope-open.svg",
+    "/themes/sage/dist/svg/envelope-square.svg": "/themes/sage/dist/svg/envelope-square.svg",
+    "/themes/sage/dist/svg/envelope.svg": "/themes/sage/dist/svg/envelope.svg",
+    "/themes/sage/dist/svg/times.svg": "/themes/sage/dist/svg/times.svg",
+    "/themes/sage/dist/svg/logo-black.svg": "/themes/sage/dist/svg/logo-black.svg",
+    "/themes/sage/dist/svg/logo-solid.svg": "/themes/sage/dist/svg/logo-solid.svg",
+    "/themes/sage/dist/svg/logo.svg": "/themes/sage/dist/svg/logo.svg",
+    "/themes/sage/dist/svg/menu.svg": "/themes/sage/dist/svg/menu.svg",
+    "/themes/sage/dist/svg/organize.svg": "/themes/sage/dist/svg/organize.svg",
+    "/themes/sage/dist/svg/waves-triple.svg": "/themes/sage/dist/svg/waves-triple.svg",
+    "/themes/sage/dist/svg/yellowed-paper.svg": "/themes/sage/dist/svg/yellowed-paper.svg"
 }
