--- a/web/app/themes/sage/package.json
+++ b/web/app/themes/sage/package.json
@@ -63,6 +63,8 @@
     "@wordpress/dom-ready": "^2.5.1",
     "animejs": "^3.1.0",
     "headroom.js": "^0.10.4",
-    "lodash": "^4.17.15"
+    "intersection-observer": "^0.7.0",
+    "lodash": "^4.17.15",
+    "lozad": "^1.14.0"
   }
 }
