--- a/web/app/themes/sage/package.json
+++ b/web/app/themes/sage/package.json
@@ -61,6 +61,7 @@
     "@wordpress/block-library": "^2.14.1",
     "@wordpress/components": "^9.2.1",
     "@wordpress/dom-ready": "^2.5.1",
+    "@wordpress/edit-post": "^3.13.1",
     "animejs": "^3.1.0",
     "headroom.js": "^0.10.4",
     "intersection-observer": "^0.7.0",
