--- a/composer.json
+++ b/composer.json
@@ -7,20 +7,8 @@
       "url": "https://wpackagist.org"
     },
     {
-      "type": "git",
-      "url": "git@github.com:pixelcollective/dreamdefenders-org-theme"
-    },
-    {
-      "type": "git",
-      "url": "git@github.com:pixelcollective/mirror-advanced-custom-fields"
-    },
-    {
-      "type": "git",
-      "url": "git@github.com:pixelcollective/mirror-wp-rocket"
-    },
-    {
-      "type": "git",
-      "url": "git@github.com:pixelcollective/mirror-meta-tags-wp"
+      "type": "composer",
+      "url": "https://packages.tinypixel.dev/satispress"
     },
     {
       "type": "git",
@@ -33,38 +21,33 @@
     {
       "type": "git",
       "url": "git@github.com:humanmade/wp-redis-predis-client"
-    },
-    {
-      "type": "git",
-      "url": "https://github.com/tabrisrp/wp-background-processing"
     }
   ],
   "require": {
     "php": ">=7.1",
     "composer/installers": "^1.4",
-    "devgeniem/wp-cron-runner": "^1.0",
-    "humanmade/wp-redis-predis-client": "dev-master",
+    "vlucas/phpdotenv": "^4.1.0",
     "oscarotero/env": "^1.2.0",
-    "primetime/wp-plugin-activation-manifest": "^1.0",
-    "rarst/laps": "^3.3",
+    "sentry/sdk": "^2.0",
     "roots/soil": ">=3",
     "roots/wordpress": ">=5",
     "roots/wp-config": "1.0.0",
     "roots/wp-password-bcrypt": "1.0.0",
     "roots/wp-stage-switcher": "^2.0",
-    "sentry/sdk": "^2.0",
-    "sybrew/the-seo-framework-extension-manager": "^2.0",
+    "wp-cli/wp-cli-bundle": "=2.4.0",
+    "aaemnnosttv/wp-cli-login-server": "^1.2",
+    "humanmade/wp-redis-predis-client": "dev-master",
+    "tiny-pixel-packagist/advanced-custom-fields-pro": "^5.8",
+    "tiny-pixel-packagist/wp-rocket": "^3.4",
     "tiny-pixel/admin-to-console": "^1.0",
-    "tiny-pixel/advanced-custom-fields": "dev-master",
-    "tiny-pixel/config": "^0.0.1",
     "tiny-pixel/disallow-mail": "^1.0",
     "tiny-pixel/s3-uploads-adapter": "dev-master",
     "tiny-pixel/wp-performant-media": ">=1.0.1",
-    "wp-cli/wp-cli-bundle": "=2.4.0",
+    "primetime/wp-plugin-activation-manifest": "^1.0",
+    "sybrew/the-seo-framework-extension-manager": "^2.0",
     "wp-graphql/wp-graphiql": "^1.0.0",
     "wp-graphql/wp-graphql": "^0.6.0",
     "wp-graphql/wp-graphql-acf": "^0.3.1",
-    "wp-media/wp-rocket": "dev-master",
     "wpackagist-plugin/autodescription": ">=3.0.6",
     "wpackagist-plugin/disable-comments": "^1.10",
     "wpackagist-plugin/duplicate-post": ">=3.2.2",
@@ -84,15 +67,7 @@
     "franzl/studio": "^0.13.0",
     "phpunit/phpunit": "^9.0",
     "roave/security-advisories": "dev-master",
-    "squizlabs/php_codesniffer": "^3.5",
-    "wpackagist-plugin/rewrite-testing": ">=0.1",
-    "wpackagist-plugin/user-switching": ">=1.5.0",
-    "wpackagist-plugin/wp-crontrol": "^1.7"
-  },
-  "autoload": {
-    "psr-4": {
-      "TinyPixel\\Config\\": "config/TinyPixel/"
-    }
+    "squizlabs/php_codesniffer": "^3.5"
   },
   "config": {
     "optimize-autoloader": true,
@@ -111,7 +86,7 @@
         "wp-graphql/wp-graphql",
         "wp-graphql/wp-graphql-acf",
         "wp-graphql/wp-graphiql",
-        "tiny-pixel/advanced-custom-fields",
+        "tiny-pixel-packages/advanced-custom-fields",
         "tiny-pixel/s3-uploads-adapter"
       ],
       "web/app/plugins/{$name}/": [
