--- a/package.json
+++ b/package.json
@@ -9,21 +9,12 @@
   ],
   "private": true,
   "scripts": {
-    "dev": "webpack-dev-server --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
-    "all": "cross-env NODE_ENV=production webpack --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
     "cypress:open": "cypress open",
     "cypress:development": "cypress run --spec 'tests/cypress/integration/development.js' --browser chrome",
     "cypress:staging": "cypress run --spec 'tests/cypress/integration/staging.js' --browser chrome",
     "cypress:production": "cypress run --spec 'tests/cypress/integration/production.js' --browser chrome",
-    "start": "concurrently --kill-others-on-fail -c bold.bgMagenta.white,bold.bgBlue.white -n blocks,sage \"yarn start:blocks\" \"yarn start:theme\"",
-    "start:theme": "yarn workspace theme start",
-    "start:blocks": "yarn workspace blocks build",
-    "build": "concurrently --kill-others-on-fail -c bold.bgMagenta.white,bold.bgBlue.white -n blocks,sage \"yarn build:blocks\" \"yarn build:theme\"",
-    "build:theme": "yarn workspace theme build",
-    "build:blocks": "yarn workspace blocks build",
-    "production": "concurrently --kill-others-on-fail -c bold.bgMagenta.white,bold.bgBlue.white -n sage,blocks \"yarn production:theme\" \"yarn production:blocks\"",
-    "production:theme": "yarn workspace theme build:production",
-    "production:blocks": "yarn workspace blocks build"
+    "start": "webpack-dev-server --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "build": "cross-env NODE_ENV=production webpack --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
   },
   "devDependencies": {
     "@percy/cypress": "^2.2.0",
