--- a/web/app/themes/sage/app-manifest.json
+++ b/web/app/themes/sage/app-manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Dream Defenders",
   "short_name": "DD",
-  "description": "Young, powerful people organizing towards a new vision for safety away from prisons.",
+  "description": "A new vision for safety away from prisons.",
   "lang": "en-US",
   "start_url": "https://build.dreamdefenders.tinypixel.dev",
   "display": "standalone",
