--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "cypress:development": "cypress run --spec 'tests/cypress/integration/development.js' --browser chrome",
     "cypress:staging": "cypress run --spec 'tests/cypress/integration/staging.js' --browser chrome",
     "cypress:production": "cypress run --spec 'tests/cypress/integration/production.js' --browser chrome",
-    "start": "webpack-dev-server --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "start": "yarn run npm-run-all start:*",
+    "start:theme": "yarn workspace @dream-defenders/theme start",
+    "start:blocks": "yarn workspace @dream-defenders/blocks start",
     "dev": "cross-env NODE_ENV=development webpack --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
     "build": "yarn run npm-run-all build:*",
     "build:theme": "yarn workspace @dream-defenders/theme build",
