add organize block

--- a/composer.json
+++ b/composer.json
@@ -25,26 +25,27 @@
   ],
   "require": {
     "php": ">=7.1",
+    "aaemnnosttv/wp-cli-login-server": "^1.2",
     "composer/installers": "^1.4",
-    "vlucas/phpdotenv": "^4.1.0",
+    "humanmade/wp-redis-predis-client": "dev-master",
     "oscarotero/env": "^1.2.0",
-    "sentry/sdk": "^2.0",
+    "primetime/wp-plugin-activation-manifest": "^1.0",
     "roots/soil": ">=3",
     "roots/wordpress": ">=5",
     "roots/wp-config": "1.0.0",
     "roots/wp-password-bcrypt": "1.0.0",
     "roots/wp-stage-switcher": "^2.0",
-    "wp-cli/wp-cli-bundle": "=2.4.0",
-    "aaemnnosttv/wp-cli-login-server": "^1.2",
-    "humanmade/wp-redis-predis-client": "dev-master",
+    "sentry/sdk": "^2.0",
+    "sybrew/the-seo-framework-extension-manager": "^2.0",
+    "tightenco/collect": "^7.2",
     "tiny-pixel-packagist/advanced-custom-fields-pro": "^5.8",
     "tiny-pixel-packagist/wp-rocket": "^3.4",
     "tiny-pixel/admin-to-console": "^1.0",
     "tiny-pixel/disallow-mail": "^1.0",
     "tiny-pixel/s3-uploads-adapter": "dev-master",
     "tiny-pixel/wp-performant-media": ">=1.0.1",
-    "primetime/wp-plugin-activation-manifest": "^1.0",
-    "sybrew/the-seo-framework-extension-manager": "^2.0",
+    "vlucas/phpdotenv": "^4.1.0",
+    "wp-cli/wp-cli-bundle": "=2.4.0",
     "wp-graphql/wp-graphiql": "^1.0.0",
     "wp-graphql/wp-graphql": "^0.7.0",
     "wp-graphql/wp-graphql-acf": "^0.3.1",
