--- a/web/app/themes/sage/package.json
+++ b/web/app/themes/sage/package.json
@@ -28,14 +28,16 @@
   "devDependencies": {
     "@babel/plugin-syntax-dynamic-import": "^7.8",
     "@wordpress/babel-preset-default": "^4.8.0",
+    "@wordpress/base-styles": "^1.9.0",
     "@wordpress/browserslist-config": "^2.6.0",
+    "@wordpress/postcss-themes": "^2.4.0",
     "babel-eslint": "^10.0.3",
     "browser-sync": "^2.26.7",
     "browser-sync-webpack-plugin": "^2.0.1",
     "cross-env": "^6.0.3",
     "eslint": "^6.8.0",
     "eslint-plugin-import": "^2.20.0",
-    "laravel-mix": "^5.0.1",
+    "laravel-mix": "^5.0.4",
     "laravel-mix-copy-watched": "^2.2.2",
     "laravel-mix-purgecss": "^4.2.0",
     "npm-run-all": "^4.1",
@@ -49,8 +51,7 @@
     "tailwindcss-gradients": "^2.3.1",
     "tailwindcss-scrims": "^1.0.0",
     "tailwindcss-transitions": "^2.1.0",
-    "vue-template-compiler": "^2.6.10",
-    "workbox-webpack-plugin": "^5.0.0"
+    "vue-template-compiler": "^2.6.10"
   },
   "dependencies": {
     "@tinypixelco/hoverfx": "^0.0.2",
@@ -62,9 +63,6 @@
     "headroom.js": "^0.10.4",
     "intersection-observer": "^0.7.0",
     "lodash": "^4.17.15",
-    "lozad": "^1.14.0",
-    "workbox-expiration": "^5.0.0",
-    "workbox-routing": "^5.0.0",
-    "workbox-strategies": "^5.0.0"
+    "lozad": "^1.14.0"
   }
 }
