--- a/web/app/plugins/dream-defenders-blocks/package.json
+++ b/web/app/plugins/dream-defenders-blocks/package.json
@@ -6,7 +6,8 @@
     "dev": "cross-env NODE_ENV=development webpack --progress --hide-modules --config=../../../../node_modules/laravel-mix/setup/webpack.config.js",
     "start": "cross-env NODE_ENV=development webpack --watch --progress --hide-modules --config=../../../../node_modules/laravel-mix/setup/webpack.config.js",
     "watch": "cross-env NODE_ENV=development webpack-dev-server --inline --hot --config=../../../../node_modules/laravel-mix/setup/webpack.config.js",
-    "build": "cross-env NODE_ENV=production webpack --no-progress --hide-modules  --config=../../../../node_modules/laravel-mix/setup/webpack.config.js"
+    "build": "cross-env NODE_ENV=development webpack --no-progress --hide-modules  --config=../../../../node_modules/laravel-mix/setup/webpack.config.js",
+    "build:production": "cross-env NODE_ENV=development webpack --no-progress --hide-modules  --config=../../../../node_modules/laravel-mix/setup/webpack.config.js"
   },
   "devDependencies": {
     "@babel/plugin-syntax-object-rest-spread": "^7.2.0",
