--- a/web/app/themes/sage/package.json
+++ b/web/app/themes/sage/package.json
@@ -6,7 +6,7 @@
     "extends @wordpress/browserslist-config"
   ],
   "scripts": {
-    "build": "cross-env NODE_ENV=production webpack --no-progress --hide-modules --config=../../../../node_modules/laravel-mix/setup/webpack.config.js",
+    "build": "webpack --no-progress --hide-modules --config=../../../../node_modules/laravel-mix/setup/webpack.config.js",
     "build:production": "cross-env NODE_ENV=production run-s clean mix:production",
     "start": "cross-env NODE_ENV=development run-s \"mix -- --watch\"",
     "hot": "cross-env NODE_ENV=development run-s build mix:hot",
