--- a/web/app/themes/sage/package.json
+++ b/web/app/themes/sage/package.json
@@ -26,15 +26,16 @@
     "translate:js": "wp i18n make-json ./resources/languages --no-purge --pretty-print"
   },
   "devDependencies": {
+    "@babel/core": "^7.10.2",
     "@babel/plugin-syntax-dynamic-import": "^7.8",
     "@wordpress/babel-preset-default": "^4.8.0",
     "@wordpress/base-styles": "^1.9.0",
-    "@wordpress/browserslist-config": "^2.6.0",
-    "@wordpress/postcss-themes": "^2.4.0",
     "@wordpress/block-library": "^2.14.1",
+    "@wordpress/browserslist-config": "^2.6.0",
     "@wordpress/components": "^9.2.1",
     "@wordpress/dom-ready": "^2.5.1",
     "@wordpress/edit-post": "^3.13.1",
+    "@wordpress/postcss-themes": "^2.4.0",
     "babel-eslint": "^10.0.3",
     "browser-sync": "^2.26.7",
     "browser-sync-webpack-plugin": "^2.0.1",
@@ -46,6 +47,9 @@
     "laravel-mix-purgecss": "^4.2.0",
     "lodash": "^4.17.15",
     "npm-run-all": "^4.1",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-with-direction": "^1.3.1",
     "rimraf": "^3.0",
     "sass": "^1.24.4",
     "sass-loader": "^8.0.2",
