--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,7 @@ executors:
   php-73:
     docker:
       - image: circleci/php:7.4-stretch
-  default:
+  node:
     docker:
       - image: 'itinerisltd/tiller-circleci:node-12'
 
