--- a/composer.json
+++ b/composer.json
@@ -31,6 +31,7 @@
     "vlucas/phpdotenv": "^4.1.0",
     "wpackagist-plugin/autodescription": ">=3.0.6",
     "wpackagist-plugin/gutenberg": "^8",
+    "wpackagist-plugin/quicklink": "^0.7.1",
     "wpackagist-plugin/simple-page-ordering": "^2.3",
     "wpackagist-plugin/wp-redis": "^1.0.0"
   },
