--- a/web/app/themes/sage/package.json
+++ b/web/app/themes/sage/package.json
@@ -64,6 +64,7 @@
   },
   "dependencies": {
     "@tinypixelco/hoverfx": "^0.0.2",
+    "alpinejs": "^2.3.5",
     "animejs": "^3.1.0",
     "headroom.js": "^0.11.0",
     "intersection-observer": "^0.10.0",
