--- a/web/app/themes/sage/package.json
+++ b/web/app/themes/sage/package.json
@@ -25,6 +25,7 @@
   "devDependencies": {
     "@tailwindcss/typography": "^0.4.0",
     "@tinypixelco/laravel-mix-wp-blocks": "^1.1.0",
+    "@wordpress/babel-preset-default": "^6.1.0",
     "@wordpress/base-styles": "^1.9.0",
     "@wordpress/block-library": "^2.14.1",
     "@wordpress/browserslist-config": "^3.0.1",
