--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
     "vlucas/phpdotenv": "^5.0.0",
     "oscarotero/env": "^2.0",
     "roots/bedrock-autoloader": "^1.0",
-    "roots/wordpress": "5.7.2",
+    "roots/wordpress": "5.8.1",
     "roots/wp-config": "1.0.0",
     "roots/wp-password-bcrypt": "1.0.0",
     "humanmade/wp-redis-predis-client": "dev-master",
@@ -29,8 +29,7 @@
     "roots/wp-stage-switcher": "^2.0",
     "tiny-pixel/s3-uploads-adapter": "dev-master",
     "wpackagist-plugin/autodescription": ">=3.0.6",
-    "wpackagist-plugin/gutenberg": "^8",
-    "wpackagist-plugin/quicklink": "^0.8.0",
+    "wpackagist-plugin/quicklink": "0.9.1",
     "wpackagist-plugin/simple-page-ordering": "^2.3",
     "wpackagist-plugin/wp-redis": "^1.0.0"
   },
