[dependencies] update tinypixel/blocks to 1.0.2

--- a/web/app/plugins/dream-defenders-blocks/composer.json
+++ b/web/app/plugins/dream-defenders-blocks/composer.json
@@ -13,7 +13,7 @@
   "prefer-stable": true,
   "require": {
     "tightenco/collect": "^8.34.0",
-    "tiny-pixel/blocks": "1.0.0"
+    "tiny-pixel/blocks": "dev-master"
   },
   "autoload": {
     "psr-4": {
