--- a/web/app/themes/sage/package.json
+++ b/web/app/themes/sage/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@dream-defenders/theme",
+  "name": "@dreamdefenders/theme",
   "version": "1.0.0",
   "license": "MIT",
   "browserslist": [
